# SDK-Win64

./: README.md  indem.lib
demo/plugin/: CMakeLists.txt
demo/plugin/include/: seethrough.h
demo/plugin/src/: seethrough.cpp
demo/sdk/: CMakeLists.txt  Indem.cpp
include/: imrdata.h  imrsdk.h
